fix typo in comment

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,14 +11,11 @@
             margin: 0;
             padding: 0;
         }
-
         .container {
             margin: 0 auto;
             padding: 10px;
         }
-
         h1 {font-size: 1.5em;}
-
         div.app {
             display: inline-block; //show multiple apps per line if other style settings permit
             margin: 5px;
@@ -38,7 +35,7 @@
 </div>
 <script>
 //add Javascript here and/or inject it from MainActivity.kt with webView.evaluateJavascript("your javascript here", null)
-//declare Android functions in MainActivity.kt within AnddroidBridge e.g.: fun yourFunctionName(exampleInput:String){} -- then call from JS with Android.yourFunctionName();
+//declare Android functions in MainActivity.kt within AndroidBridge e.g.: fun yourFunctionName(exampleInput:String){} -- then call from JS with Android.yourFunctionName();
 </script>
 </body>
 </html>
